--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ h1 {
 }
 body {
   background-color: #8ecae6;
+  padding-top: 2rem;
 }
 
 #small-div {
@@ -24,7 +25,6 @@ body {
   display: inline-flex;
   flex-wrap: wrap;
   border: 1px solid black;
-
   width: 482px;
   height: 482px;
   margin: auto;
@@ -37,6 +37,14 @@ body {
   margin-left: 20%;
   margin-right: 20%;
   padding-bottom: 5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border: 2px solid black;
+  border-radius: 2rem;
+}
+
+button {
+  margin-top: 20px;
 }
 
 /* color pallet section */
